--- a/tesi.bib
+++ b/tesi.bib
@@ -128,6 +128,12 @@ url = {https://exploit-exercises.com/fusion/},
 year={},
 }
 
+@TECHREPORT{Checkoway-10,
+    author = {Stephen Checkoway and Hovav Shacham},
+    title = {Escape from return-oriented programming: Returnoriented programming without returns (on the x86},
+    institution = {},
+    year = {2010}
+}
 
 @incollection{Barrett-14,
   Author =	 {Clark Barrett and Cesare Tinelli},
