--- a/introduzione.tex
+++ b/introduzione.tex
@@ -102,8 +102,8 @@ un'istruzione ret. L'istruzione ret preleva dalla memoria dello stack
 un indirizzo e ridireziona il flusso del programma a quel dato
 indirizzo. Viene utilizzata al termine dell'esecuzione di una funzione
 per tornare alla porzione di codice che l'ha richiamata. Potendo
-controllare lo stack l'attaccante può arrangiarlo in modo in modo che
-una volta che il programma arrivi all'istruzione ret, sullo stack sia
+controllare lo stack l'attaccante può arrangiarlo in modo che una
+volta che il programma arrivi all'istruzione ret, sullo stack sia
 presente l'indirizzo di una seconda serie dalle caratteristiche simili
 alla prima. Ripetendo lo stesso discorso più volte è possibile
 concatenare un numero arbitrario di queste piccole serie di istruzioni
