verso la prima bozza

--- a/architettura.tex
+++ b/architettura.tex
@@ -130,6 +130,7 @@ L'architettura di Dropper si compone di tre moduli logici:
 \end{itemize}
 
 \section{Modulo Core}
+\label{sec:arc:core}
 
 È il modulo che si occupa di leggere il file binario, interagire con
 l'utente, scegliere le varie strategie da adottare e di coordinare le
