--- a/implementazione.tex
+++ b/implementazione.tex
@@ -1,37 +1,44 @@
 \chapter{Implementazione di Dropper}
 \label{cap:implementazione}
-In questo capito si farà un'analisi dell'attuale stato di sviluppo di dropper.
+
+In questo capitolo si farà un'analisi dell'attuale stato di sviluppo
+di Dropper.
 
 \section{Modulo Core}
 
 \subsection{Interazione con l'utente}
 
-Attualmente dropper si interfaccia all'utente tramite alcune funzioni
+Attualmente Dropper si interfaccia all'utente tramite alcune funzioni
 della classe \lstinline{dropper}. Il costruttore di questa classe
 riceve come argomento il percorso sul file system dove risiede il file
 oggetto eseguibile da analizzare. Le operazioni di analisi vengono
-avviate tramite la funzione \lstinline{analyze_all}. Una volta
-analizzato si può richiamare la funzione
+avviate tramite la funzione \lstinline{analyze_all}. Una volta che
+l'analisi è stata effettuata si può richiamare la funzione
 \lstinline{build_spawn_shell_payload} che si occupera di generare la
 catena vera e propria. Anche se queste sono le uniche chiamate
-essenziali l'utente ha a disposizione ulteriori funzioni:
+essenziali per utilizzare Dropper l'utente ha a disposizione ulteriori
+funzioni:
 \begin{itemize}
 
 \item \lstinline{set_can_control_fd} setta il file descriptor
   controllato dall'utente (-1 se nessun file descriptor può essere
   controllato)
 
+\item \lstinline{add_shared_object} permette di analizzare un oggetto
+  che rappresenti una libreria dinamica. Dropper ricava da questo file
+  gli offset relativi tra le funzioni della libreria
+
 \item \lstinline{set_function_for_address_resolving} indica la
   funzione di riferimento da utilizzare nell'applicazione di tecniche
   che ricavino l'indirizzo di funzioni casualizzate in memoria
-  partendo da valori nella GOT table. La funzione indicata dev'essere
-  già stata richiamata almeno una volta al momento dell'esecuzione
-  della catena
+  partendo da valori nella GOT table (vedi sez. \ref{sec:expl}. La
+  funzione indicata dev'essere già stata richiamata almeno una volta
+  al momento dell'esecuzione della catena
 
-\item \lstinline{set_writeable_area} setta l'indirizzo di inizio
-  dell'area di memoria dove effettuare operazioni di scrittura. Di
-  default questo valore è settato all'indirizzo di caricamento in
-  memoria della sezione \lstinline{.data}
+\item \lstinline{set_writeable_area} setta l'indirizzo dell'area di
+  memoria dove effettuare operazioni di scrittura. Di default questo
+  valore è settato all'indirizzo di caricamento in memoria della
+  sezione \lstinline{.data}
 
 \item \lstinline{set_cmd} setta il comando da eseguire sulla macchina
   bersaglio una volta che l'exploit ha avuto successo
@@ -46,8 +53,8 @@ cerca di generare una catena che avvii il comando impostato.
 
 Se una funzione esterna viene utilizzata dal programma, anche se il
 suo indirizzo reale viene casualizzato, sarà presente un elemento
-relativo a quella funzione all'interno della procedure linkage
-table. Questo elemento, ammesso che il binario non sia stato compilato
+relativo a quella funzione all'interno della Procedure Linkage
+Table. Questo elemento, ammesso che il binario non sia stato compilato
 come indipendente dalla posizione in memoria (PIE), ha una posizione
 nota. Possiamo quindi ritornare al suo indirizzo per emulare la
 chiamata a quella funzione (return-to-plt). Nella GOT invece ogni
@@ -57,81 +64,70 @@ relativo alla stessa funzione. Per ogni funzione la rilocazione
 associata, nella sezione \lstinline{.rel.plt}, contiene nel campo
 \lstinline{r_offset} l'indirizzo dell'elemento nella GOT table. A
 partire da quest'ultimo, per le considerazioni appena fatte, può
-essere ricavato l'indirizzo della entry nella PLT. Gli indirizzi del
+essere ricavato l'indirizzo dell'elemento nella PLT. Gli indirizzi del
 relativo elemento della GOT e di quello nella PLT vengono ricavati per
 ogni funzione utilizzata dal file oggetto eseguibile nel metodo
 \lstinline{get_imports}.
 
 \subsection{Costruzione della catena}
 
-Attualmente il modulo dropper per prima cosa cerca di scrivere in
-un'area di memoria scrivibile i dati ai quali punteranno gli argomenti
+Attualmente il modulo Core per prima cosa cerca di scrivere in un'area
+di memoria scrivibile i dati ai quali punteranno gli argomenti
 dell'invocazione della funzione \lstinline{execve}. Nel caso
 quest'area di memoria non viene specificata dall'utente viene
 utilizzato l'indirizzo di caricamento in memoria della sezione
 \lstinline{.data}. Gli argomenti e i dati veri e propri vengono creati
 dal modulo partendo dal comando che si è deciso di eseguire sulla
 macchina (nella funzione \lstinline{payload_execve_args}). Se si può
-controllare un file descriptor e \lstinline{read} è presente
-nell'insieme delle funzioni utilizzate dal programma allora dropper
-crea una catena che ritorni all'elemento all'interno della PLT
-relativo a \lstinline{read} e fa in modo che vengano letti, dal file
-descriptor indicato, una quantità di dati pari alla dimensione dei
-dati da scrivere e che essi vengano scritti nell'area di memoria
-scelta come area scrivibile. Per far questo viene utilizzato il metodo
-\lstinline{get_ret_func_chunk} del modulo gadgets tool il quale ci
-consente di creare una catena che richiami una funzione di cui si
-conosce l'indirizzo. È compito poi dell'utente fare in modo che al
-momento della chiamata di questa funzione il file descriptor indicato
-si trovi nello stato giusto a restituire i valori calcolati dal
-modulo. I valori da fornire nel file descriptor vengono forniti
-all'utente nel parametro \lstinline{fd_payload} di dropper.
+controllare un file descriptor Core utilizza la funzione
+\lstinline{read} per scrivere in memoria gli argomenti di
+\lstinline{execve}, come descritto in \ref{sec:arc:core}. Per fare
+questo viene utilizzato il metodo \lstinline{get_ret_func_chunk} del
+modulo gadgets tool il quale ci consente di creare una catena che
+richiami una funzione di cui si conosce l'indirizzo. È compito poi
+dell'utente fare in modo che al momento della chiamata di questa
+funzione il file descriptor indicato si trovi nello stato giusto in
+modo da restituire i valori calcolati dal modulo. I valori da inserire
+nel flusso del file descriptor vengono ricavati dall'utente attraverso
+il parametro \lstinline{fd_payload} di dropper.
 %%TODO
 Esempio?
 
 Attualmente è implementata una seconda strategia nel caso non sia
-presente la funzione \lstinline{read} e/o non si controlli nessun file
-descriptor. Essa consiste nell'utilizzare una serie di gadget che
-possano spostare valori dallo stack in una locazione di memoria
-arbitraria.  Per costruire una catena del genere si chiama la funzione
-\lstinline{build_memory_write} del modulo gadgets tools che prende
-come argomenti l'indirizzo della memoria dove scrivere e i dati da
-scrivere. Solitamente, come vedremo in \ref{sec:memorystore}, le
-catene generate in questo modo tendono ad essere piuttosto lunghe.
+possibile richiamare la funzione \lstinline{read} e/o non si controlli
+nessun file descriptor. Essa consiste nell'utilizzare una serie di
+gadget che possano spostare valori dallo stack in una locazione di
+memoria arbitraria.  Per costruire una catena del genere si chiama la
+funzione \lstinline{build_memory_write} del modulo Gadgets che prende
+come argomenti l'indirizzo della memoria dove scrivere i
+dati. Solitamente, come vedremo in \ref{sec:memorystore}, le catene
+generate in questo modo tendono ad essere piuttosto lunghe.
 
 %%TODO inserire strategie non implementate?
 
 Per quanto riguarda la seconda fase, la chiamata della funzione, sono
-state implementate solo due strategie. La prima nel caso
-\lstinline{execve} sia presente all'interno delle funzioni utilizzate
-dal programma. In questo caso la generazione della parte restante
-della catena è banale e, come visto nel paragrafo precedente, viene
-costruita dalla funzione \lstinline{get_ret_func_chunk} del modulo
-gagdettools. Più interessante è il caso in cui il file oggetto
-eseguibile non utilizzi questa funzione. Una strategia che è possibile
-adottare in questo caso si basa sul calcolo dell'indirizzo della
-funzione voluta partendo da una funzione utilizzata dal programma, il
-cui indirizzo viene ricavato dal relativo elemento nella GOT table. La
-funzione dev'essere già stata chiamata almeno una volta, questo fa si
-che nella GOT table sia presente l'indirizzo reale e non l'indirizzo
-del relativo elemento all'interno della PLT. L'indirizzo può essere
-sia calcolato in un registro o in una zona di memoria per poi
-sfruttare una tipologia di gadget che ci permetta di ``saltare''
-all'indirizzo calcolato (\emph{got dereferencing}). È anche possibile,
-se l'eseguibile non è compilato con RORELOC, modificare il valore
-della GOT in loco, aggiungendo l'offset necessario (\emph{got
-  patching}). Attualmente è implementata solo la seconda strategia. Il
-modulo gadgets tools espone il metodo \lstinline{build_memory_write} che
-si occupa dei dettagli implementativi di questo tipo di catena. Viene
-chiamato da dropper con i seguenti parametri:
+state implementate due strategie. La prima nel caso \lstinline{execve}
+sia presente all'interno delle funzioni utilizzate dal programma. In
+questo caso la generazione della parte restante della catena è banale
+e, come visto nel paragrafo precedente, viene costruita dalla funzione
+\lstinline{get_ret_func_chunk} del modulo Gadgets. Più
+interessante è il caso in cui il file oggetto eseguibile non utilizzi
+questa funzione. 
+
+Infatti in questo Dropper cerca di far costruire al modulo Dropper una
+catena in grado di modificare il valore della Global Offset Table in
+loco, in modo da effettuare una tecnica di tipo \emph{got patching}
+(vedi \ref{sec:expl}). Il modulo Gadgets espone il metodo
+\lstinline{build_memory_write} che si occupa dei dettagli
+implementativi di questo tipo di catena. Viene chiamato dal modulo
+Core con i seguenti parametri:
 
 \begin{itemize}
   \item l'indirizzo di memoria dove eseguire la somma: l'indirizzo
-    dell'elemento della GOT da ``patchare''
-
+    dell'elemento della GOT da ``patchare''. Quest'informazione viene
+    ricavata durante la fase dell'analisi degli import
   \item il valore da aggiungere: l'offset relativo tra la funzione
     utilizzata come base e quella voluta
-
   \item il valore di base: l'offset che la funzione di base ha
     all'interno del file oggetto condiviso della libreria. Come
     vedremo questo rende possibile utilizzare la tecnica anche quando
@@ -145,22 +141,46 @@ La classe inoltre contiene alcuni metodi per il salvataggio dei dati
 relativi ai gadgets su disco, questo perché l'analisi di eseguibili
 molto grandi può durare diversi minuti. Al loro interno questi metodi
 utilizzano la libreria \lstinline{pickle} per la serializzazione degli
-oggetti.
+oggetti. 
 
 \section{Modulo Gadgets}
 
-Questo modulo estrapola e cataloga i gadget presenti nel binario in
-esame ed espone i metodi di creazione delle catene per l'esecuzione di
-diverse funzioni. Le catene vengono costruite arrangiando i gadget
-disponibili e collaborando con il modulo payloadchunk che si occupa
-della generazione del payload vero e proprio. Fondamentale per poter
-utilizzare un gadget è poter controllare i registri coinvolti nelle
-sue operazioni, per questo motivo la prima analisi che viene condotta
-una volta ottenuta la lista dei gadget è la selezione di quelli che ci
-consentono di controllare i registri. La ricerca dei gadget viene
-effettuata in tutte le sezioni che vengono caricate in memoria
-(discriminate dal tipo \lstinline{SHT_PROGBITS}) e marcate come
-eseguibili.
+Questo modulo, come descritto nel capitolo dedicato all'architettura,
+estrapola e cataloga i gadget presenti nel binario in esame ed espone
+i metodi di creazione delle catene per l'esecuzione di diverse
+funzioni. Le catene vengono costruite arrangiando i gadget disponibili
+e collaborando con il modulo Payload che si occupa della generazione
+del payload vero e proprio. Attualmente il modulo mette a disposizione
+i seguenti metodi per la generazione delle catene:
+\begin{itemize}
+  \item \lstinline{get_stack_slide_chunk}: consente di aggiungere un
+    valore arbitrario al registro dello stack, questo tipo di catene
+    ci consente ad esempio di ``saltare'' gli argomenti di una
+    funzione sullo stack e passare al gadget successivo
+  \item \lstinline{get_ret_func_chunk}: restituisce una catena che
+    richiami una funzione. Riceve come parametri di ingresso gli
+    argomenti da passare alla funzione e l'indirizzo della funzione
+    stesssa 
+  \item \lstinline{get_memory_add_chunk}: restituisce una catena che
+    esegue un operazione di addizione in una locazione di memoria
+    arbitraria
+  \item \lstinline{get_memory_store_chunk}: restituisce una catena che
+    scriva in memoria dei valori arbitrari
+  \item \lstinline{get_ccf_chunk}: restituisce un chunk che azzeri il
+    carry flag
+\end{itemize}
+
+Le tipologie di gadget utilizzate per la costruzione di queste catene
+sono descritte nella parte restante di questo capitolo. 
+
+Fondamentale per poter utilizzare un gadget è poter controllare i
+registri coinvolti nelle sue operazioni, per questo motivo la prima
+analisi che viene condotta una volta ottenuta la lista dei gadget è la
+selezione di quelli che ci consentono di controllare i registri. La
+ricerca dei gadget viene effettuata in tutte le sezioni che vengono
+caricate in memoria e marcate come eseguibili. Si è deciso di separare
+il modulo in diverse sottoclassi, ognuna delle quali contiene la
+logica per la selezione e l'utilizzo di un particolare tipo di gadget.
 
 \subsection{Selezione dei gadget per l'impostazione dei registri}
 
@@ -174,80 +194,103 @@ classe espone il metodo \lstinline{get_chunk} che ritorna una catena
 che imposta i registri in modo da riflettere le coppie registro/valore
 del dizionario preso come argomento. Attualmente solo gadget che
 contengono istruzioni di tipo \lstinline{pop reg} vengono considerati
-come potenziali candidati per l'impostazione di registri. L'analisi
-avviene tramite la simulazione istruzione per istruzione. Se
-l'istruzione attuale è di tipo \lstinline{pop reg} allora si memorizza
-il nome del registro e l'offset tra il valore attuale dello stack e
-quello all'inizio della simulazione. Questo ci consente di conoscere
-dove posizionare il valore da impostare nel registro al momento della
-generazione del payload. Durante la simulazione si controlla anche che
-le istruzioni che non sono del tipo \lstinline{pop reg} non eseguano
-operazioni di lettura o scrittura sulla memoria. Questo ci consente di
-scartare già in questa fase i gadget che presentano effetti
-secondari. Alla fine della funzione abbiamo la lista dei registri che
-il gadget può impostare con i relativi offset dello stack. La funzione
-\lstinline{get_chunk} invece restituisce una catena che consente di
-impostare l'insieme dei registri che riceve in ingresso. Dato che un
-gadget potrebbe impostare più di un registro, la scelta dei gadget che
-andranno a comporre questa catena è riducibile ad un problema di
-\emph{set covering}. È preferibile che il payload generato dalla
-catena sia il più piccolo possibile. La lunghezza della catena è
-influenzata sia dal numero di gadget utilizzati, sia dal padding che è
-necessario inserire nell'utilizzo di ogni gadget per via delle
-operazioni che esso effettua sul registro dello stack. Attualmente per
-trovare la catena viene utilizzato un algoritmo greedy che scorre i
-registri da ``coprire'' e, se il registro non è già coperto da un
-gadget inserito nella catena, sceglie il gadget che lo copre e che
-necessita del minor padding possibile. Se l'aggiunta di un gadget ne
-rende superfluo uno già presente nei candidati quest'ultimo viene
-rimosso. La soluzione trovata con quest'algoritmo non è ottima.
+come potenziali candidati per l'impostazione di registri.
+
+L'analisi avviene tramite una simulazione istruzione per
+istruzione. Se l'istruzione attuale è di tipo \lstinline{pop reg}
+allora si memorizza il nome del registro e l'offset tra il valore
+attuale dello stack e quello all'inizio della simulazione. Questo ci
+consente di conoscere dove posizionare il valore da impostare nel
+registro al momento della generazione del payload. Durante la
+simulazione si controlla anche che le istruzioni che non sono del tipo
+\lstinline{pop reg} non eseguano operazioni di lettura o scrittura
+sulla memoria. Questo ci consente di scartare già in questa fase i
+gadget che presentano effetti secondari. Dopo la fase di analisi
+quindi avremo, per ogni gadget, la lista dei registri che possono
+essere impostati insieme all'ordine e alla posizione con cui vengono
+prelevati dallo stack. 
+
+
+La funzione \lstinline{get_chunk} invece restituisce una catena che
+consente di impostare l'insieme dei registri che riceve in
+ingresso. Dato che un gadget potrebbe impostare più di un registro, la
+scelta dei gadget che andranno a comporre questa catena è riducibile
+ad un problema di \emph{set covering}. È preferibile che il payload
+generato dalla catena sia il più piccolo possibile. La lunghezza della
+catena è influenzata sia dal numero di gadget utilizzati, sia dal
+padding che è necessario inserire nell'utilizzo di ogni gadget per via
+delle operazioni che esso effettua sul registro dello
+stack. Attualmente per trovare la catena viene utilizzato un algoritmo
+greedy che scorre i registri da ``coprire'' e, se il registro non è
+già coperto da un gadget inserito nella catena, sceglie il gadget che
+lo copre e che necessita del minor padding possibile. Se l'aggiunta di
+un gadget ne rende superfluo uno già presente nei candidati
+quest'ultimo viene rimosso. La soluzione trovata con quest'algoritmo
+non è ottima. Nella sezione \ref{sec:pddl} è descritto un primo
+approccio per l'utilizzo di planner nella ricerca di una sequenza
+ottima.
 
 \subsection{Selezione dei gadget per la scrittura in memoria}
 \label{sec:memorystore}
 
 La logica e le strutture dati per gestire i gadget che ci consentono
 di scrivere in memoria si trovano nella classe
-\lstinline{MemoryStore}.  Durante la prima classificazione la classe
+\lstinline{MemoryStore}. 
+
+Durante la prima classificazione la classe
 \lstinline{GadgetClassifier} del framework BARF verifica se a seguito
 di alcune simulazioni un valore presente in un registro (denominato
 sorgente) viene scritto in una locazione di memoria il cui indirizzo
 corrisponde al valore di un registro (denominato destinazione) sommato
-ad un eventuale offset. Ogni volta che questa condizione viene
-verificata il gadget viene aggiunto alla categoria StoreMemory. È da
-notare che la condizione di cui sopra potrebbe verificarsi per più
-coppie di registri nello stesso gadget, per ognuna di queste viene
-creato un oggetto gadget di tipo StoreMemory e aggiunto alla
-categoria. La classe parte da questi gadget per procedere alla fase di
-verifica e validazione. Innanzitutto se il registro di destinazione è
-il registro dello stack il gadget viene scartato. Questo fa in modo
-che non vengano presi in considerazione i gadget con istruzioni tipo
-\lstinline{push reg}. Questi gadget infatti, solitamente non
-consentono di scrivere in una regione arbitraria della memoria, oltre
-a complicare la gestione dello schema dello stack. Dopo di che vengono
-scartati anche i gadget che hanno come registro di destinazione rip e
-eip. Infatti essendo questo registro fisso rispetto all'istruzione che
-lo esegue neanche questi gadget ci consentono di scrivere in una
-posizione arbitraria di memoria. Dopo di che si procede seguendo le
-linee guida descritte in \ref{s:verifica_validazione}: il gadget
-viene scartato se non si possono controllare i registri sorgente e
-destinazione, si verifica e valida la generalità e ci si assicura che
-il gadget non presenti effetti secondari. I valori scelti casualmente
-per la verifica e la validazione sono la locazione di memoria e il
-valore da scrivere. Nella verifica degli effetti secondari si
-controlla che non ci siano scritture al di fuori della locazione
-scelta e dello stack. Il metodo \lstinline{get_chunk} invece prende
-come argomenti un indirizzo in memoria e dei valori e restituisce una
-catena che scrive i valori in memoria partendo da quell'indirizzo. Il
-metodo sceglie uno dei gadget disponibili e calcola quante iterazioni
-sono necessarie per la scrittura dei valori. Per ogni iterazione poi
-utilizza il risolutore SMT per ottenere i valori dei registri sorgente
-e destinazione corretti. Sempre per ogni iterazione, si utilizza la
+ad un eventuale offset.
+
+Ogni volta che questa condizione viene verificata il gadget viene
+aggiunto alla categoria StoreMemory. È da notare che la condizione di
+cui sopra potrebbe verificarsi per più coppie di registri nello stesso
+gadget, per ognuna di queste viene creato un oggetto gadget di tipo
+StoreMemory e aggiunto alla categoria. La classe parte da questi
+gadget per procedere alla fase di verifica e validazione.
+
+Innanzitutto se il registro di destinazione è il registro dello stack
+il gadget viene scartato. Questo fa in modo che non vengano presi in
+considerazione i gadget con istruzioni tipo \lstinline{push
+  reg}. Questi gadget infatti, solitamente non consentono di scrivere
+in una regione arbitraria della memoria, oltre a complicare la
+gestione dello schema dello stack. Dopo di che vengono scartati anche
+i gadget che hanno come registro di destinazione rip e eip. Infatti
+essendo questo registro fisso rispetto all'istruzione che lo esegue
+neanche questi gadget ci consentono di scrivere in una posizione
+arbitraria di memoria.
+
+Dopo di che si procede seguendo le linee guida descritte in
+\ref{s:verifica_validazione}: il gadget viene scartato se non si
+possono controllare i registri sorgente e destinazione, si verifica e
+valida la generalità e ci si assicura che il gadget non presenti
+effetti secondari. Nella verifica degli effetti secondari si controlla
+che non ci siano scritture al di fuori della locazione scelta e dello
+stack.
+
+Il metodo \lstinline{get_chunk} invece prende come argomenti un
+indirizzo in memoria e una stringa e restituisce una catena che scrive
+la stringa in memoria partendo da quell'indirizzo. Il metodo quindi
+espone un livello d'astrazione più alto al modulo che la utilizza e,
+normalmente, vi è bisogno di più iterazioni dell'esecuzione del gadget
+per ottenere la scrittura desiderata. Il metodo, infatti, oltre a
+scegliere uno dei gadget disponibili calcola il numero di queste
+iterazioni chen sono necessarie per la scrittura dei valori. Per ogni
+iterazione poi utilizza una modellazione logica unita ad un risolutore
+SMT per ottenere i valori dei registri sorgente e destinazione
+corretti. Anche se si potrebbero utilizzare il valore di offset
+ottenuto durante la fase di catalogazione del gadget utilizzare il
+risolutore ci permette di utilizzare anche gadget i cui effetti
+secondari modifichino la locazione di memoria in maniera indipendente
+dagli altri registri. Sempre per ogni iterazione, si utilizza la
 classe \lstinline{regset} per ottenere una catena che setti i registri
 a quei valori, e la si concatena a sua volta al gadget che si sta
 utilizzando per scrivere in memoria. Viene restituita la
 concatenazione delle catene create per ogni iterazione, che
-verosimilmente scriverà in memoria, partendo dall'indirizzo indicato
-i valori in ingresso.
+verosimilmente scriverà in memoria, partendo dall'indirizzo indicato i
+valori in ingresso.
 
 \subsection{Selezione dei gadget per la operazioni aritmetiche in
   memoria}
@@ -255,104 +298,99 @@ i valori in ingresso.
 
 La logica e le strutture dati per la gestione dei gadget che ci
 consentono di scrivere in memoria risiedono nella classe
-\lstinline{aritmeticmemorystore}. Anche in questo caso si parte dai
-gadget classificati dal framework BARF, ma appartenenti, per
-l'appunto, alla categoria Arithmetic Memory Store. Un gadget viene
-inserito in questa categoria se, dopo alcune simulazioni del gadget,
-una locazione di memoria viene modificata e come valore finale
-riflette il risultato di un'operazione aritmetica binaria tra il
-valore precedente di quella locazione e il valore iniziale contenuto
-in un registro. Inoltre si individua un registro che potrebbe essere
-usato dal gadget come indirizzo della locazione di memoria (insieme ad
-un eventuale offset). Dato che la simulazione viene ripetuta più volte
-i falsi positivi vengono ridotti. È possibile che un gadget esibisca
-il comportamento di cui sopra più di una volta, anche in questo caso
-vengono creati diversi oggetti di tipo Arithmetic Memory
-Store. L'analisi di questi gadget procede, come anche nella categoria
+\lstinline{aritmeticmemorystore}.
+
+Anche in questo caso si parte dai gadget classificati dal framework
+BARF, ma appartenenti, per l'appunto, alla categoria Arithmetic Memory
+Store. Un gadget viene inserito in questa categoria se, dopo alcune
+simulazioni del gadget, una locazione di memoria viene modificata e
+come valore finale riflette il risultato di un'operazione aritmetica
+binaria tra il valore precedente di quella locazione e il valore
+iniziale contenuto in un registro. Inoltre si individua un registro
+che potrebbe essere usato dal gadget come indirizzo della locazione di
+memoria (insieme ad un eventuale offset). Dato che la simulazione
+viene ripetuta più volte i falsi positivi vengono ridotti. È possibile
+che un gadget esibisca il comportamento di cui sopra più di una volta,
+anche in questo caso vengono creati diversi oggetti di tipo Arithmetic
+Memory Store. L'analisi di questi gadget procede, come anche nella categoria
 precedente, sulla falsa riga della procedura indicata in
-\ref{s:verifica_validazione}. Tuttavia un'attenzione particolare va
-posta nell'analisi dei gadget che utilizzano un'operazione di
-addizione che considerano il valore di riporto (ad esempio adc su
-intel). Questi gadget possono rilevarsi molto utili. Spesso infatti
-sono disponibili solo gadget aritmetici che ci consentono di
-aggiungere un byte per volta. Effettuare un'operazione di got patching
-(vedi sez. \ref{sec:got_patching}) un byte per volta senza considerare
-i valori di riporto tra un byte e il successivo può portare ad un
-risultato errato dell'operazione che si sta effettuando. Per poter
-permettere la cataloghizzazione di questo tipo di gadget, si è dovuto
-applicare una piccola patch al framework per permetterci di poter
-controllare in qualche modo il contesto dei registri che utilizza
-durante le simulazioni per la classificazione. Infatti il
-classificatore, nella traduzione in reil, considera il flag carry del
-registro dei flag come un registro a se stante di 16bit che viene
-aggiunto al risultato dell'operazione. Dato che questo valore è
-impostato casualmente i risultati delle simulazioni vengono
-falsati. La nostra modifica ci permette di settare un valore
-arbitrario per alcuni registri nelle simulazione, quindi
-inizializzeremo il ``registro'' con il quale è rappresentato il carry
-flag a zero. Questo viene anche imposto nelle verifiche che utilizzano
-un risolutore SMT. In più viene aggiunta una seconda coppia di
+\ref{s:verifica_validazione}.
+
+Tuttavia un'attenzione particolare va posta nell'analisi dei gadget
+che utilizzano un'operazione di addizione che considerano il valore di
+riporto (ad esempio adc su intel). Questi gadget possono rilevarsi
+molto utili. Spesso infatti sono disponibili solo gadget aritmetici
+che ci consentono di aggiungere un byte per volta. Effettuare
+un'operazione di got patching (vedi sez. \ref{sec:got_patching}) un
+byte per volta senza considerare i valori di riporto tra un byte e il
+successivo può portare ad un risultato errato dell'operazione che si
+sta effettuando. Per poter permettere la cataloghizzazione di questo
+tipo di gadget, si è dovuto applicare una piccola patch al framework
+per permetterci di poter controllare in qualche modo il contesto dei
+registri che utilizza durante le simulazioni per la
+classificazione. Questo ci ha permesso di impostare durante le
+simulazioni il valore del carry flag a zero, facendo in modo che la
+procedura di catalogazione non scarti i gadget di questo tipo. Anche
+le verifiche tramite un risolutore SMT impongono che il carry flag
+abbia valore zero. In più viene aggiunta una seconda coppia di
 modellazioni SMT con le quali si verifica se il gadget in esame
 utilizza il carry flag nell'operazione e se a seguito di un'operazione
 che sicuramente generi un valore di riporto, il carry flag al termine
-del gadget abbia valore uno. Questo ci dà la certezza rispettivamente
-che il gadget va ad utilizzare il carry flag nelle operazioni di
-addizione e che le operazioni successive all'interno del gadget non
-vadano ad influenzare il carry flag. Come detto sopra, per costruire
-una catena che ci consenta di aggiungere un valore arbitrario ad una
-locazione di memoria arbitraria, bisogna avere a disposizione o gadget
-aritmetici la cui dimensione dell'operazione sia di almeno un byte più
-grande dell'addendo o un gadget che, per l'appunto, consenta di
-eseguire operazioni utilizzando i valori di ritorno. In questo secondo
-caso però bisogna anche concatenare, se è disponibile, un gadget che
-abbia come effetto quello di azzerare il carry flag, da inserire prima
+dell'esecuzione del gadget abbia valore uno. Questo ci dà la certezza
+rispettivamente che il gadget va ad utilizzare il carry flag nelle
+operazioni di addizione e che le operazioni successive all'interno del
+gadget non vadano ad influenzare il carry flag.
+
+Come detto sopra, per costruire una catena che ci consente di
+aggiungere un valore arbitrario ad una locazione di memoria
+arbitraria, bisogna avere a disposizione o gadget aritmetici la cui
+dimensione dell'operazione sia di almeno un byte più grande
+dell'addendo o un gadget che, per l'appunto, consenta di eseguire
+operazioni utilizzando i valori di ritorno. In questo secondo caso
+però bisogna anche concatenare, se è disponibile, un gadget che abbia
+come effetto quello di azzerare il carry flag, da inserire prima
 dell'operazione. La logica per la ricerca di questo tipo di gadget è
 presente nella classe \lstinline{ClearCarryFlag}. È da notare che se
 questo tipo di gadget non fosse presente la catena generata potrebbe
 non avere l'esito sperato, tuttavia è presumibile che in molti tipi di
 exploit il carry flag abbia sempre lo stesso valore all'inizio
 dell'esecuzione della catena. La sottrazione quindi di un'unità al
-primo byte dell'offset dovrebbe essere sufficiente per generare una
-catena corretta. Se non sono disponibili né un un gadget che consenta
-di aggiungere abbastanza bytes per volta né un gadget che effettua
-operazioni considerando il valore di riporto è tuttavia possibile
-generare una catena con alte probabilità di successo. Infatti
-l'indirizzo di memoria nel quale viene caricato il file oggetto
-condiviso della libreria, nonostante sia casualizzato, dev'essere
-allineato in memoria al valore specificato nel parametro
-\lstinline{p_align} all'interno del program header. Questo comporta
-che un certo numero di bits meno significativi dell'indirizzo di una
-funzione non cambino da un'esecuzione all'altra. Solitamente sono i
-21bits meno significativi, e l'offset tra due funzioni nella libc
-solitamente è tre byte. Questo fa si che si può calcolare il valore di
-riporto per i primi due byte. Solo il valore di riporto dell'ultimo
-byte (di cui conosciamo solo la parte meno significativa) risulterebbe
-casuale, facendo si che si possano generare catene con probabilità di
-successo pari almeno al 50\%.
+primo byte dell'addendo dovrebbe essere sufficiente per generare una
+catena corretta. 
 
+Se non sono disponibili né un un gadget che consenta di aggiungere
+abbastanza bytes per volta né un gadget che effettua operazioni
+considerando il valore di riporto è tuttavia possibile generare una
+catena con alte probabilità di successo. Infatti l'indirizzo di
+memoria nel quale viene caricato il file oggetto condiviso della
+libreria, nonostante sia casualizzato, dev'essere allineato in memoria
+al valore specificato nel parametro \lstinline{p_align} all'interno
+del program header. Questo comporta che un certo numero di bits meno
+significativi dell'indirizzo di una funzione non cambino da
+un'esecuzione all'altra. Solitamente sono i 21bits meno significativi,
+e l'offset tra due funzioni nella libc solitamente è tre byte. Questo
+fa si che si può calcolare il valore di riporto per i primi due
+byte. Solo il valore di riporto dell'ultimo byte (di cui conosciamo
+solo la parte meno significativa) risulterebbe casuale, facendo si che
+si possano generare catene con probabilità di successo pari almeno al
+50\%.
 
-È da notare che nell'implementazione attuale manca ancora
-l'implementazione della logica per la ricerca e la verifica di
-importanti categorie di gadget (come Jump, MemoryLoad, MoveRegister o
-Arithmetic). L'implementazione di queste categorie dovrebbe consentire
-la generazione di catene in condizioni più articolate o quando le
-categorie di gadget attualmente implementate non sono disponibili.
 
 \section{Modulo Payload}
 
 Questo modulo si occupa di generare a partire da una lista ordinata di
-uno o più gadgets un array binario di dati da iniettare nello stack
-del file oggetto eseguibile esaminato. La preparazione del payload
-varia rispetto al gadget per il quale si sta creando il chunk e può
-consistere nel solo indirizzo del gadget, o in schemi più complicati
-come indirizzi di funzioni più relativi argomenti o a valori da
-trasferire dalla stack ai registri. Ogni classe che si occupa della
-generazione di un particolare tipo di chunk ha le informazioni
-necessarie per permettere al chunk stesso di essere concatenato ad
-altri chunk per generarne un altro, anch'esso a sua volta
-concatenabile, che rappresenti i chunk di partenza. Per permettere
-questa concatenazione ogni chunk deve presentare le seguenti
-informazioni:
+uno o più gadgets una stringa binaria di dati da iniettare nello stack
+del file oggetto eseguibile esaminato, denominata Payload. La
+preparazione del payload varia rispetto al gadget per il quale si sta
+creando il chunk e può consistere nel solo indirizzo del gadget, o in
+schemi più complicati come indirizzi di funzioni più relativi
+argomenti o a valori da trasferire dalla stack ai registri. Ogni
+classe che si occupa della generazione di un particolare tipo di chunk
+ha le informazioni necessarie per permettere al chunk stesso di essere
+concatenato ad altri chunk per generarne un altro, anch'esso a sua
+volta concatenabile, che rappresenti i chunk di partenza. Per
+permettere questa concatenazione ogni chunk deve presentare le
+seguenti informazioni:
 
 %3201899105
 
